--- a/public/css/styles-welcome.css
+++ b/public/css/styles-welcome.css
@@ -40,6 +40,7 @@ nav #nav-title {
   nav #nav-title {
     width: 100%;
     padding-top: 10px;
+    text-align: center;
   }
 }
 
@@ -82,6 +83,12 @@ nav #menu .menu-button a {
   padding: 2rem;
 }
 
+@media screen and (max-width: 480px) {
+  .wrapper {
+    padding: 0;
+  }
+}
+
 h1 {
   text-align: center;
   letter-spacing: 3px;
@@ -106,6 +113,8 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 350px;
   margin: 20px auto;
   -webkit-box-pack: justify;
