--- a/public/sass/styles-search.scss
+++ b/public/sass/styles-search.scss
@@ -1,3 +1,9 @@
+.container-search {
+  @media screen and (max-width: 480px) {
+    padding: 0;
+  }
+}
+
 #cont-tabla {
   display: flex;
   flex-direction: column;
@@ -12,6 +18,7 @@
   & .result-table {
     border: 1px solid black;
     border-collapse: collapse;
+    
 
     & th {
       background-color: #aaa;
@@ -27,6 +34,15 @@
       background-color: #f7d493;
       font-weight: bold;
     }
+
+    
+    
+  }
+
+  @media screen and (max-width: 480px) {
+    // font-size: smaller;
+    width: 100%;
+    overflow: scroll;
   }
 }
 
